Sassari progressive number fixed